--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "percom",
   "version": "1.0.2",
   "description": "A calculation npm module that is to simplify the calculation of permutations and combinations",
+  "keywords": [
+    "combination",
+    "permitation",
+    "calclation",
+    "enumeration",
+    "percom",
+    "組み合わせ",
+    "順列",
+    "列挙",
+    "javascript 組み合わせ 列挙"
+  ],
   "main": "index.js",
   "repository": "https://github.com/kota-yata/percom",
   "author": "Kota Yatagai (https://kota-yata.github.io)",
