--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.3",
   "description": "A calculation npm module that is to simplify the calculation of permutations and combinations",
   "keywords": [
+    "math",
+    "front-end",
     "combination",
     "permitation",
     "calclation",
