--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "coveralls": "^3.1.0",
+    "jest": "^26.0.1",
     "jsdoc": "^3.6.4",
     "mocha": "^7.1.2"
   },
