--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "列挙",
     "javascript 組み合わせ 列挙"
   ],
-  "main": "index.js",
+  "main": "./src/index.js",
   "repository": "https://github.com/kota-yata/percom",
-  "author": "Kota Yatagai (https://kota-yata.github.io)",
+  "author": "Kota Yatagai (https://kota-yata.com)",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "coveralls": "^3.1.0",
     "jsdoc": "^3.6.4",
     "mocha": "^7.1.2"
   },
