--- a/package.json
+++ b/package.json
@@ -21,15 +21,33 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "jsdoc": "^3.6.4",
-    "mocha": "^7.1.2"
-  },
-  "dependencies": {
     "chai": "^4.2.0",
-    "clean-jsdoc-theme": "^2.2.11"
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.7",
+    "lint-staged": "^10.5.3",
+    "mocha": "^7.1.2",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1"
   },
+  "dependencies": {},
   "scripts": {
     "test": "mocha",
-    "docs": "node_modules/.bin/jsdoc index.js README.md --configure conf.json --verbose"
+    "coverage": "nyc mocha"
+  },
+  "nyc": {
+    "include": [ "src/*.js" ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix . --ignore-path .gitignore",
+      "prettier . --write --ignore-path .gitignore"
+    ]
   }
 }
